--- a/index.html
+++ b/index.html
@@ -7,202 +7,86 @@
     <title>Ferrari - Velocidad y Exclusividad</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="ferrari.css">
-    <style>
-        /* Reset básico */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Montserrat', sans-serif;
-            line-height: 1.5;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: #f8f8f8;
-            border-bottom: 2px solid #ddd;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        header.hidden {
-            transform: translateY(-100%);
-        }
-
-        .logo img {
-            width: 150px;
-            height: auto;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 15px;
-        }
-
-        nav ul li {
-            display: inline;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: #d70000;
-            font-weight: bold;
-        }
-
-        h1 a {
-            text-decoration: none;
-            color: black;
-            font-size: 1.5rem;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        section {
-            margin-bottom: 40px;
-        }
-
-        section img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-
-        .modelo {
-            margin-bottom: 20px;
-        }
-
-        .cajapublicidad iframe {
-            margin: 20px 0;
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #f8f8f8;
-        }
-
-        /* Responsividad */
-        @media (max-width: 768px) {
-            .logo img {
-                width: 120px;
-            }
-
-            nav ul {
-                flex-wrap: wrap;
-                gap: 10px;
-                justify-content: center;
-            }
-
-            h1 a {
-                font-size: 1.2rem;
-                text-align: center;
-            }
-
-            .modelo img {
-                max-width: 100%;
-            }
-
-            section {
-                margin-bottom: 30px;
-            }
-
-            .redes-sociales img {
-                width: 30px;
-                height: 30px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            nav ul {
-                flex-direction: column;
-                gap: 5px;
-            }
-
-            h1 a {
-                font-size: 1rem;
-            }
-
-            section {
-                padding: 10px;
-            }
-
-            .modelo img {
-                max-width: 100%;
-            }
-
-            .redes-sociales img {
-                width: 25px;
-                height: 25px;
-            }
-        }
-    </style>
 </head>
 <body>
+
     <header>
         <div class="logo">
-            <img src="imagenes/grandes/logoferrari.png" alt="Logo de Ferrari" loading="lazy">
+            <img src="imagenes/grandes/logoferrari.png" alt="Logo de Ferrari">
         </div>
-        <h1><a href="galeria.html" title="Ir a la galería">Ferrari: Innovación en Autos Deportivos</a></h1>
+        <h1><a href="galeria.html">Ferrari: Innovación en Autos Deportivos</a></h1>
         <div class="contacto">
-            <a href="contacto.html" title="Contáctanos">Contáctanos</a>
+            <a href="contacto.html">Contáctanos</a>
         </div>
     </header>
 
     <nav>
         <ul>
-            <li><a href="#sobre-nosotros" aria-label="Ir a la sección Sobre Ferrari">Sobre Ferrari</a></li>
-            <li><a href="galeria.html" aria-label="Ver la galería de Ferrari">Galería</a></li>
-            <li><a href="#modelos" aria-label="Ir a la sección Modelos">Modelos</a></li>
-            <li><a href="#tecnologia" aria-label="Ir a la sección Tecnología">Tecnología</a></li>
-            <li><a href="#contacto" aria-label="Ir a la sección Contacto">Contacto</a></li>
-            <li><a href="precentacion.html">Presentación</a></li>
+            <li><a href="#sobre-nosotros">Sobre Ferrari</a></li>
+             <li><a href="galeria.html">Galería</a></li>
+            <li><a href="#modelos">Modelos</a></li>
+            <li><a href="#tecnologia">Tecnología</a></li>
+            <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
 
     <main>
         <section id="sobre-nosotros">
             <h2>Sobre Ferrari</h2>
-            <p>Ferrari es sinónimo de lujo, velocidad y excelencia en ingeniería automovilística...</p>
-            <a href="historia.html" title="Descubre la historia de Ferrari">
-                <img src="imagenes/grandes/blancoynegro.jpg" alt="Historia de Ferrari en blanco y negro" loading="lazy">
-            </a>
+            <div>
+                <p>Ferrari es sinónimo de lujo, velocidad y excelencia en ingeniería automovilística. Con una historia que se remonta a 1939, nos hemos consolidado como la marca líder en vehículos deportivos de alto rendimiento.</p>
+                <a href="historia.html">
+                    <img src="imagenes/grandes/blancoynegro.jpg" alt="Historia de Ferrari">
+                </a>
+            </div>
         </section>
 
         <section id="modelos">
             <h2>Modelos Destacados</h2>
             <div class="modelo">
-                <img src="imagenes/grandes/ferrarisf90stradale.jpg" alt="Ferrari SF90 Stradale - Superdeportivo híbrido" loading="lazy">
+                <img src="imagenes/grandes/ferrarisf90stradale.jpg" alt="Ferrari SF90 Stradale - Superdeportivo híbrido">
                 <h3><a href="sf90.html">Ferrari SF90 Stradale</a></h3>
-                <p>Un superdeportivo híbrido con 1000 CV...</p>
+                <p>Un superdeportivo híbrido con 1000 CV, diseñado para ofrecer una experiencia de conducción extrema.</p>
             </div>
             <div class="modelo">
-                <img src="imagenes/grandes/ferrariroma.jpg" alt="Ferrari Roma - Elegancia y potencia" loading="lazy">
+                <img src="imagenes/grandes/ferrariroma.jpg" alt="Ferrari Roma - Elegancia y potencia">
                 <h3><a href="roma.html">Ferrari Roma</a></h3>
-                <p>Elegancia y potencia se combinan en este modelo...</p>
+                <p>Elegancia y potencia se combinan en este modelo de diseño atemporal con un motor V8 turbo.</p>
+            </div>
+            <div class="modelo">
+                <img src="imagenes/grandes/ferraripurosangre.jpg" alt="Ferrari Purosangue - Primer SUV de Ferrari">
+                <h3><a href="purosangue.html">Ferrari Purosangue</a></h3>
+                <p>El primer SUV de Ferrari, que redefine el lujo y la versatilidad con la potencia de un V12.</p>
             </div>
         </section>
 
+        <section id="tecnologia">
+            <h2>Tecnología de Vanguardia</h2>
+            <div>
+                <p>Ferrari es pionero en incorporar las tecnologías más avanzadas tanto en motores como en aerodinámica. Nuestro equipo de ingeniería trabaja constantemente para mejorar el rendimiento y la eficiencia en cada modelo.</p>
+                <ul>
+                    <li>Sistemas híbridos avanzados</li>
+                    <li>Diseño aerodinámico optimizado</li>
+                    <li>Materiales ultraligeros</li>
+                    <li>Tecnología de simulación de pista</li>
+                </ul>
+                <img src="imagenes/grandes/tecnologiaferrari.jpg" alt="Tecnología de Ferrari">
+            </div>
+        </section>
+        <div class="cajapublicidad">
+        <iframe class="anuncio" src="https://lvc-sitioweb.github.io/enigma-studios/anuncio.html" width="100%"  name="marco" frameborder="0" scrolling="no"></iframe>
+       </div>
         <section id="contacto">
             <h2>Contacto</h2>
-            <p>Si deseas más información sobre nuestros vehículos...</p>
+            <div>
+                <p>Si deseas más información sobre nuestros vehículos o realizar una prueba de manejo, contáctanos a través de nuestro correo: <a href="mailto:info@ferrari.com">info@ferrari.com</a> o síguenos en nuestras redes sociales.</p>
+            </div>
             <div class="redes-sociales">
                 <h3>Síguenos en</h3>
-                <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-                    <img src="imagenes/grandes/ig.png" alt="Icono de Instagram" loading="lazy">
-                </a>
+                <a href="https://www.instagram.com" target="_blank"><img src="imagenes/grandes/grandes/ig.png" alt="Instagram"></a>
             </div>
         </section>
     </main>
+
 </body>
 </html>
